fixed dark mode.
found bugs: deleting an added item does not disable apply.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 @import "svg";
 @import "animation";
+@import "colors";
 
 html {
   scroll-behavior: smooth;
@@ -14,6 +15,8 @@ body {
 
   line-height: 1.5;
   font-family: "Open Sans", sans-serif;
+
+
 }
 
 .main-wrapper {
@@ -24,57 +27,6 @@ body {
 
   main {
     width: 100%;
-  }
-}
-
-.form-wrapper {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  gap: 10px;
-  background-color: beige;
-  margin: 10px;
-
-  .form-controls {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 10px;
-    margin: 10px;
-  }
-
-  .error {
-    grid-column: 1 / 3;
-    padding: 10px;
-    color: red;
-  }
-}
-
-.course-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 20px;
-  padding: 10px;
-  width: 100%;
-
-  label {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 500px;
-
-    > * {
-      width: 100%;
-    }
-
-    > input, > textarea {
-      height: 2.5em;
-      padding: 10px;
-      outline: none;
-      overflow: hidden;
-      resize: none;
-    }
   }
 }
 
@@ -89,6 +41,8 @@ section {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    padding: 10px;
+
     > div {
       display: flex;
       gap: 1ch;
@@ -114,6 +68,55 @@ section {
   }
 }
 
+.form-wrapper {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 10px;
+  margin: 10px;
+
+  .form-controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 10px;
+    margin: 10px;
+  }
+
+  .error {
+    grid-column: 1 / 3;
+    padding: 10px;
+  }
+}
+
+.course-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+  padding: 10px;
+  width: 100%;
+
+  label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 500px;
+
+    > * {
+      width: 100%;
+    }
+
+    > input, > textarea {
+      height: 2.5em;
+      padding: 10px;
+      overflow: hidden;
+      resize: none;
+    }
+  }
+}
+
+
 .expand-button {
   transition: transform 200ms linear;
 }
@@ -125,7 +128,6 @@ section {
 textarea {
   height: 2.5em;
   padding: 10px;
-  outline: none;
   overflow: hidden;
   resize: none;
 }
