--- a/src/sass/svg.scss
+++ b/src/sass/svg.scss
@@ -2,89 +2,8 @@
   width: 40px;
   height: 40px;
   border-radius: 10px;
-  .background {
-    fill: red;
-  }
 
-  .foreground {
-    fill: white;
-  }
-  &.disabled {
-    .background {
-      fill: gray;
-    }
-  }
   &.invisible {
     display: none;
-  }
-}
-
-.svg-plus {
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-  fill: red;
-  background-color: red;
-  .background {
-    fill: red;
-  }
-
-  .cross {
-    fill: white;
-  }
-}
-
-.svg-arrow {
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-
-  .background {
-    fill: red;
-  }
-
-  .arrow {
-    fill: white;
-  }
-}
-
-.svg-cross {
-  width: 40px;
-  height: 40px;
-  border-radius: 10px;
-
-  .background {
-    fill: red;
-  }
-
-  .cross {
-    fill: white;
-  }
-}
-
-.svg-undo {
-  border-radius: 10px;
-  width: 40px;
-  height: 40px;
-  .background {
-    fill: red;
-  }
-
-  .arrow {
-    fill: white;
-  }
-}
-
-.svg-apply {
-  border-radius: 10px;
-  width: 40px;
-  height: 40px;
-
-  .background {
-    fill: red;
-  }
-
-  .arrow {
-    fill: white;
   }
 }
